Fix image characters not visible due to small screen width

--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ header {
   background-size: cover;
 }
 
+@media(max-width: 600px) {
+header {
+background-position: 28%;
+}
+}
+
 nav {
   display: flex;
   justify-content: space-between;
